Eclipse Plug-in::
	1. Few bug fixes (for bugs which were indirectly introduced during the latest refactoring).
	2. The plug-in was tested and works as usual.